# froide-payment

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  setup.py  tsconfig.json
froide_payment/: __init__.py  admin.py  admin_utils.py  apps.py  forms.py  listeners.py  models.py  payments_urls.py  provider.py  signals.py  tasks.py  urls.py  utils.py  views.py  widgets.py
froide_payment/migrations/: 0001_initial.py  0002_order_is_donation.py  0003_order_kind.py  0004_auto_20190416_1719.py  0005_auto_20190521_1351.py  0006_auto_20190527_1410.py  0007_auto_20190918_2008.py  0008_plan_amount_year.py  0009_auto_20191017_1446.py  0010_auto_20191216_1238.py  0011_auto_20200121_1624.py  0012_subscription_canceled.py  0013_auto_20200528_1201.py  0014_auto_20200610_1439.py  0015_alter_payment_status.py  0016_payment_billing_phone.py  0017_order_unique_remote_reference_service_start.py  0018_alter_plan_slug.py  0018_order_remote_reference_is_unique_and_more.py  0019_subscription_subscription_unique_remote_reference.py  0020_subscription_cancel_trigger_subscription_canceled_by.py
froide_payment/provider/: __init__.py  banktransfer.py  lastschrift.py  mixins.py  paypal.py  stripe.py  utils.py
froide_payment/templates/: bootstrap_field.html
froide_payment/templates/froide_payment/: base.html  payment.html
froide_payment/templatetags/: froide_payment.py
frontend/javascript/: base.ts  creditcard.ts  payment.ts  paymentrequest.ts  quickpayment.ts  sepa.ts  stripe-v3.augment.d.ts  types.ts  ui.ts
(+27 files in other folders)
